@@ -3,6 +3,7 @@
   * (grid) responsive gap, gapx, gapy
   * (grid) gap25, gap3, gap4
   * (grid) fix vh100
+  * (grid) add mindvh, minsvh, minlvh
   * (type) noselect
 
 # 0.19.0 (2022-01-28)
